[package]
name = "ice_core"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
pretty_env_logger = "0.4.0"

winit = "0.24.0"

vulkano = "0.22.0"

imgui = "0.7.0"
imgui-winit-support = "0.7.0"
imgui-vulkano-renderer = { git = "https://github.com/Lucky4Luuk/imgui-vulkano-renderer.git", branch = "master" }

ice_vox_mem = { path = "../ice_vox_mem" }
ice_render = { path = "../ice_render" }
ice_ui = { path = "../ice_ui" }

glam = "0.14.0"

egui = "0.11.0"
egui_winit_platform = "0.6.0"
egui_vulkano = "0.1.0"
