[package]
name = "ice_render"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"

winit = "0.24.0"

ice_ui = { path = "../ice_ui" }

vulkano = "0.22.0"
vulkano-win = "0.22.0"
vulkano-shaders = "0.22.0"

egui = "0.11.0"
egui_vulkano = "0.1.0"
